--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng-image-input-with-preview": "^1.0.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
