--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
-            "es5BrowserSupport": true
+            //"es5BrowserSupport": true
           },
           "configurations": {
             "production": {
@@ -92,7 +92,7 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.png",
+              "src/favicon.ico",
               "src/assets"
             ]
           }
