--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ng-image-input-with-preview": "^1.0.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
@@ -32,7 +32,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.12.4",
     "@angular/cli": "~7.3.1",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
